# BlocksGame

./: .gitmodules  CMakeLists.txt  README.md
resources/shaders/: _block.gs  axes.fs  axes.vs  block.fs  block.gs  block.vs  default.fs  glyph.vs
source/: CMakeLists.txt  abstract_system.cpp  abstract_system.hpp  camera.cpp  camera.hpp  camera_projection_type.hpp  container.cpp  container.hpp  data_buffer.hpp  direction.hpp  game.cpp  game.hpp  image.hpp  main.cpp  op_result.hpp  shader.cpp  shader.hpp  types.hpp
source/file/: abstract_file_system.hpp  common_file_system.cpp  common_file_system.hpp
source/input/: abstract_input_system.hpp  glfw_convert.cpp  glfw_convert.hpp  glfw_input_system.cpp  glfw_input_system.hpp  input.hpp  key_state.hpp  keyboard_key.hpp  keyboard_key_state.hpp
source/input/glfw/: glfw_convert.cpp  glfw_convert.hpp  glfw_input.hpp  glfw_input_system.cpp  glfw_input_system.hpp
source/model/: block.hpp  chunk.hpp  chunk_part.hpp  map.hpp  model.hpp
source/render/: abstract_render_system.hpp  glew_render_system.cpp  glew_render_system.hpp
source/render/glew/: glew_block_shader_program.cpp  glew_block_shader_program.hpp  glew_buffer.cpp  glew_buffer.hpp  glew_chunks_map.hpp  glew_entity.cpp  glew_entity.hpp  glew_glyph.cpp  glew_glyph.hpp  glew_render_system.cpp  glew_render_system.hpp  glew_shader.cpp  glew_shader.hpp  glew_shader_program.cpp  glew_shader_program.hpp  glew_shader_type.hpp  glew_texture.cpp  glew_texture.hpp  glew_vertex_array.cpp  glew_vertex_array.hpp
source/resource/: abstract_font.hpp  abstract_resource_system.hpp  freetype_font.cpp  freetype_font.hpp  glyph.hpp  image.hpp  resource_id.cpp  resource_id.hpp  resource_system.cpp  resource_system.hpp
source/utils/: abstract_noise_2d.hpp  perlin_noise_2d.cpp  perlin_noise_2d.hpp
source/window/: abstract_window_system.hpp  glfw_window_system.cpp  glfw_window_system.hpp
source/world/: block.hpp  chunk.hpp  chunk_part.hpp  chunk_position.hpp  chunk_storage.hpp  world.cpp  world.hpp
tests/: CMakeLists.txt  common_file_system_tests.cpp  crt_memory_checker.cpp  crt_memory_checker.hpp  data_buffer_tests.cpp
tests/resources/: simple_text_file.txt
